# curl_bash

./: Cargo.toml  README.md
py/: mogui.py
src/: main.rs
